docs, test: [033-REFACTOR-UNIT-TEST] 주문생성 Policy 테스트 개선 (테스트 가독성 향상 및 의도 명확화 / 픽스처 구조화)
- 정상 시나리오 given절을 픽스쳐로 교체하여 가독성 향상
- 구매가능 수량 초과 테스트에 경계값 계산식(maxQuantity + 1)을 적용하여 검증 의도 명확화
- Collections.singletonMap을 Map.of 표현식으로 교체하여 코드 표현식 간결화
- 픽스쳐 메서드(member, requestOrderItem) 파라미터화 및 오버로딩 구조를 대표 메서드 체이닝 방식으로 재설계하여 중복 코드 제거